fable/test/valid/implied_trailing_program.f
      subroutine sub
      write(6, *) 'write sub'
      end

      call sub
      end
