fable/test/semantic_error/twice_in_sub_args.f
      subroutine sub(val, val)
      end
